# mess_box

./: .gitignore  README.md
async/: async_wikipedia.ipynb  asyncio_mini_tutorial.py  asyncio_minitutorial_2.py  awaitable.ipynb  gather.py  monuments_async.py  pyproject.toml
base_merimee/: base_merimee.ipynb  clean_data.ipynb
base_merimee/data/: create_base_merimee.ipynb
blue_sky/: blue_sky.ipynb
data_evolution/: .gitignore  README.md  pyproject.toml  ruff.toml
data_evolution/examples/world_population/: config.yaml
data_evolution/src/: __init__.py  charts.py  config.py  dataset.py  main.py  video.py
data_evolution/world_population/: .gitignore  create_charts_for_tables.py  create_table_for_plot.py  filter_values.yaml  main.ipynb  make_video_from_images.py  population.ipynb
geo_france/: parcelles.ipynb  pyproject.toml  query_lakehouse.ipynb
iterations/: iterations.ipynb
loguru_test/: main.py  pyproject.toml  zero_div.py
moviepy/: moviepy.ipynb
olympic_great_tables/: README.md  chart.ipynb  great_tables.ipynb
olympic_great_tables/input/: flags.csv  olympic_medals.csv
olympic_great_tables/output/: country_medals.html
opencv/: open_image.ipynb  opencv.ipynb
polymorphism/: benchmark.ipynb
python_fun_course/: turtle_test.ipynb
segno/: qr_code_functions.py  segno.ipynb
segno/tests/: test_qr_codes.py
transport_files/: gtfs_analysis.ipynb  pyproject.toml
uuid/: tabular_use.ipynb  uuid.ipynb
yolo_test/: .gitignore  main.py  pyproject.toml  trying_yolo.ipynb  trying_yolo.py  trying_yolo_wildlife.py  wildlife_app.py
(+1 files in other folders)
