[project]
name = "yolo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cap-from-youtube>=0.2.0",
    "chime>=0.7.0",
    "fastapi>=0.128.1",
    "ipykernel>=7.1.0",
    "pillow>=12.1.0",
    "ultralytics>=8.4.8",
    "uvicorn>=0.40.0",
]
